# spotify-clustering

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
spotify_clustering/: app.py  clustering.py  dimensionality_reduction.py  eda.py  utils.py  visualization.py
spotify_clustering/configs/: clustering.yaml  dimensionality_reduction.yaml
spotify_clustering/data/: spotify_dataset.csv
spotify_clustering/engine/: clustering.py  dimensionality_reduction.py  utils.py
spotify_clustering/utils/: metrics.py  utils.py  visualization.py
